--- a/html.html
+++ b/html.html
@@ -4,18 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css.css">
+    <link rel="stylesheet" href="./iconfont/iconfont.css">
+    
 </head>
 <body>
-    <aside>
-        <a class="side" href="#7/9">7月9号</a>
-        <a class="side" href="#7/10">7月10号</a>
-        <a class="side" href="#7/11">7月11号</a>
-        <p class="end">...</p>
-    </aside>
-
-    <div class="btn">
-        <p>学习日志</p>
+    <div class="nav">
+        <div class="header"></div>
     </div>
-
-</body>
-</html>
+    <div class="banner">
+        <img src="./resouse/登临意/banner.png" alt="" >
+        <div class="iconfont icon-a-xiala2"></div>
+    </div>
+    <div class="container">
+        <img src="./resouse/登临意/page1.jpg" alt="" class="base-image">
+        <div class="list-wrapper">
+            <ul>
+                <li>陈</li>
+                <li>仇白</li>
+                <li>槐天裴</li>
+                <li>重岳</li>
+                <li>林</li>
+                <li>截云</li>
+            </ul>
+        </div>
+    </div>
+    <script src="./js.js"></script>
+</body>    
+</html> 
