你的提交说明

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css.css">
     <link rel="stylesheet" href="./iconfont/iconfont.css">
+    <script src="./js/animate.js"></script>
+    <script src="./js/index.js"></script>
     
 </head>
 <body>
@@ -29,6 +31,64 @@
             </ul>
         </div>
     </div>
+
+    <div class="page2">
+        <img src="./resouse/登临意/page2.png" alt="" class="base-image-2">
+        <div class="focus focus-page2">
+            <a href="javascript:;" class="arrow-l">&lt</a>
+         <a href="javascript:;" class="arrow-r">&gt</a>
+         <ul>
+            <li><img src="./resouse/resoues/立绘_重岳_1.png" alt="" class="img1"></li>
+            <li><img src="./resouse/resoues/立绘_重岳_2.png" alt=""></li>
+            <li><img src="./resouse/resoues/立绘_重岳_skin1.png" alt=""></li>
+            <li><img src="./resouse/resoues/立绘_重岳_skin2.png" alt=""></li>
+          </ul>
+          <ol class="circle"></ol>
+        </div>
+        <div class="contend">
+            <h1>重岳</h1>
+            <p>重岳先生的作息规律得可怕。卯时出晨功，吐纳调息、腿腰肩桩的基本功练习；白天任意两个时辰，熟悉各式兵器、拆解拳脚招式；戌时完成晚课，培元固基，撰文录武......三九三伏，寒暑无间。
+问题是，自从他答应了临时担任咱们的武术教师，这就变成了所有人的作息......
+“习武的诀窍，只在一个‘勤’字”，根据他的解释，习武，除了炼体，更在修心，应持之以恒。道理我当然懂，我就是抱怨一下而已，毕竟能学会传说中的“绝世神功”，还是很诱人的。不过说实话，我对槐琥描述的“玉门决战”持保留意见——飞沙走石、风云变色，两大绝世高手十合之内胜负立分什么的——这要是乌有，我几乎可以断定他是在说书讲故事，可能我们确实对炎国武学了解得还不够吧。
+参加重岳先生武术课的，除了炎国干员，还有不少来自乌萨斯、萨尔贡等地的干员，可大家私下交流，似乎都在重岳先生教授的内容里发现了自己所熟悉的格斗技艺的影子，或是招式原理、或是发力方式，很模糊，但是更简约、更有力......只有两种可能性，一是重岳先生是个天才，他接触过近半数的炎国武术流派，甚至其他国家的格斗技艺，并加以改良；二是他是个天才，他去过很多地方，很多格斗技艺的原型都是脱胎于他......扯远了，这怎么可能呢？
+总之，重岳先生的严厉程度甚至超过了杜宾教官，幸亏年小姐突然拉他去给自己筹备的系列大电影担任动作指导去了......不过话说回来，重岳先生私底下其实是个蛮温柔的人，没令小姐那么捉摸不透，也没夕小姐那么神经质......说着说着又有点想念他的课了。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。我爱重岳,重岳我老婆。</p>
+        </div>
+    </div>
+
+
+    <div class="page3">
+        <img src="./resouse/登临意/page3.png" alt="">
+        <div class="focus focus-page3">
+            <a href="javascript:;" class="arrow-l">&lt</a>
+         <a href="javascript:;" class="arrow-r">&gt</a>
+         <ul>
+            <li><img src="./resouse/resoues/立绘_林_1.png" alt="" class="img1"></li>
+            <li><img src="./resouse/resoues/立绘_林_2.png" alt=""></li>
+            <li><img src="./resouse/resoues/立绘_林_skin1.png" alt=""></li>
+            <li><img src="./resouse/resoues/立绘_林_skin2.png" alt=""></li>
+          </ul>
+          <ol class="circle"></ol>
+        </div>
+       <div class="contend">
+            <h1>林</h1>
+            <p>林小姐是个很有趣的人。她的兴趣爱好很广泛，平时喜欢研究各种各样的植物，尤其是那些有毒的植物，譬如曼陀罗、夹竹桃、夹竹桃、夹竹桃......（重要的事情说三遍）她还喜欢烹饪，尤其是那些能让人“回味无穷”的菜肴。她经常会邀请我们去她的实验室品尝她的新作品，当然，这些作品都是经过严格测试的，不会对人体造成伤害。
+林小姐的性格有些孤僻，她不太喜欢与人交流，更多的时候，她宁愿与她的植物们相处。她的实验室里摆满了各种各样的植物，有些是她自己培育的，有些是从世界各地收集来的。她对这些植物有着深厚的感情，甚至会给它们起名字。</p>
+                </div>
+    </div>
+
+
+    
+    <footer class="footer">
+    <div class="footer-content">
+        <p>© 2025 登临意主题站 | 版权所有Andrew</p>
+        <div class="footer-links">
+            <a href="https://ak.hypergryph.com/special/ad-brand-2025/index.html">明日方舟</a>
+            <a href="https://space.bilibili.com/93850103?spm_id_from=333.1007.0.0">我的B站</a>
+            <a href="https://prts.wiki/id/1">明日方舟WIKI</a>
+        </div>
+    </div>
+</footer>
+
     <script src="./js.js"></script>
 </body>    
 </html> 
