--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div class="header"></div>
     </div>
     <div class="banner">
-        <img src="./resouse/登临意/banner.png" alt="" >
+        <img src="/resource/banner.png" alt="" >
         <div class="iconfont icon-a-xiala2"></div>
     </div>
     <div class="container">
-        <img src="./resouse/登临意/page1.jpg" alt="" class="base-image">
+        <img src="./resource/page1.jpg" alt="" class="base-image">
         <div class="list-wrapper">
             <ul>
                 <li>陈</li>
@@ -33,15 +33,15 @@
     </div>
 
     <div class="page2">
-        <img src="./resouse/登临意/page2.png" alt="" class="base-image-2">
+        <img src="./resource/page2.png" alt="" class="base-image-2">
         <div class="focus focus-page2">
             <a href="javascript:;" class="arrow-l">&lt</a>
          <a href="javascript:;" class="arrow-r">&gt</a>
          <ul>
-            <li><img src="./resouse/resoues/立绘_重岳_1.png" alt="" class="img1"></li>
-            <li><img src="./resouse/resoues/立绘_重岳_2.png" alt=""></li>
-            <li><img src="./resouse/resoues/立绘_重岳_skin1.png" alt=""></li>
-            <li><img src="./resouse/resoues/立绘_重岳_skin2.png" alt=""></li>
+            <li><img src="./resource/立绘_重岳_1.png" alt="" class="img1"></li>
+            <li><img src="./resource/立绘_重岳_2.png" alt=""></li>
+            <li><img src="./resource/立绘_重岳_skin1.png" alt=""></li>
+            <li><img src="./resource/立绘_重岳_skin2.png" alt=""></li>
           </ul>
           <ol class="circle"></ol>
         </div>
@@ -57,15 +57,15 @@
 
 
     <div class="page3">
-        <img src="./resouse/登临意/page3.png" alt="">
+        <img src="./resource/page3.png" alt="">
         <div class="focus focus-page3">
             <a href="javascript:;" class="arrow-l">&lt</a>
          <a href="javascript:;" class="arrow-r">&gt</a>
          <ul>
-            <li><img src="./resouse/resoues/立绘_林_1.png" alt="" class="img1"></li>
-            <li><img src="./resouse/resoues/立绘_林_2.png" alt=""></li>
-            <li><img src="./resouse/resoues/立绘_林_skin1.png" alt=""></li>
-            <li><img src="./resouse/resoues/立绘_林_skin2.png" alt=""></li>
+            <li><img src="./resource/立绘_林_1.png" alt="" class="img1"></li>
+            <li><img src="./resource/立绘_林_2.png" alt=""></li>
+            <li><img src="./resource/立绘_林_skin1.png" alt=""></li>
+            <li><img src="./resource/立绘_林_skin2.png" alt=""></li>
           </ul>
           <ol class="circle"></ol>
         </div>
