--- a/Personal-web2/index.html
+++ b/Personal-web2/index.html
@@ -16,18 +16,18 @@
     </div>
 
     <div class="banner">
-        <img src="./Personal-web2/resource/banner.png" alt="" >
+        <img src="/Personal-web2/resource/banner.png" alt="" >
         <div id="scrollToContainer" class="iconfont icon-a-xiala2"></div>
     </div>
 
     <div class="yinyve">
-        <img id="musicico"  class="music" src="./Personal-web2/resource/changpian.png"  onclick="musiccc()"/>
-        <img id="musw"  class="musw" src="./Personal-web2/resource/qiege.png"  title="切歌" onclick="nextMusic()"/>
+        <img id="musicico"  class="music" src="/Personal-web2/resource/changpian.png"  onclick="musiccc()"/>
+        <img id="musw"  class="musw" src="/Personal-web2/resource/qiege.png"  title="切歌" onclick="nextMusic()"/>
         <audio id="music" autoplay="autoplay" src="" preload="auto"></audio>
     </div>
 
     <div class="container">
-        <img src="./Personal-web2/resource/page1.jpg" alt="" class="base-image">
+        <img src="/Personal-web2/resource/page1.jpg" alt="" class="base-image">
         <div class="list-wrapper">
             <ul>
                 <li>陈</li>
@@ -41,15 +41,15 @@
     </div>
 
     <div class="page2">
-        <img src="./Personal-web2/resource/page2.png" alt="" class="base-image-2">
+        <img src="/Personal-web2/resource/page2.png" alt="" class="base-image-2">
         <div class="focus focus-page2">
             <a href="javascript:;" class="arrow-l">&lt</a>
          <a href="javascript:;" class="arrow-r">&gt</a>
          <ul>
-            <li><img src="./Personal-web2/resource/chongyve1.png" alt="" class="img1"></li>
-            <li><img src="./Personal-web2/resource/chongyve2.png" alt=""></li>
-            <li><img src="./Personal-web2/resource/chongyve3.png" alt=""></li>
-            <li><img src="./Personal-web2/resource/chongyve4.png" alt=""></li>
+            <li><img src="/Personal-web2/resource/chongyve1.png" alt="" class="img1"></li>
+            <li><img src="/Personal-web2/resource/chongyve2.png" alt=""></li>
+            <li><img src="/Personal-web2/resource/chongyve3.png" alt=""></li>
+            <li><img src="/Personal-web2/resource/chongyve4.png" alt=""></li>
           </ul>
           <ol class="circle"></ol>
         </div>
@@ -65,15 +65,15 @@
 
 
     <div class="page3">
-        <img src="./Personal-web2/resource/page3.png" alt="">
+        <img src="/Personal-web2/resource/page3.png" alt="">
         <div class="focus focus-page3">
             <a href="javascript:;" class="arrow-l">&lt</a>
          <a href="javascript:;" class="arrow-r">&gt</a>
          <ul>
-            <li><img src="./Personal-web2/resource/lin1.png" alt="" class="img1"></li>
-            <li><img src="./Personal-web2/resource/lin2.png" alt=""></li>
-            <li><img src="./Personal-web2/resource/lin3.png" alt=""></li>
-            <li><img src="./Personal-web2/resource/lin4.png" alt=""></li>
+            <li><img src="/Personal-web2/resource/lin1.png" alt="" class="img1"></li>
+            <li><img src="/Personal-web2/resource/lin2.png" alt=""></li>
+            <li><img src="/Personal-web2/resource/lin3.png" alt=""></li>
+            <li><img src="/Personal-web2/resource/lin4.png" alt=""></li>
           </ul>
           <ol class="circle"></ol>
         </div>
